--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -7,11 +7,11 @@
 }
 
 .font-2-s {
-  font: 400 1rem/1, 5 "roboto", sans-serif;
+  font: 400 1rem/1.5 "roboto", sans-serif;
 }
 
 .font-1-s {
-  font: 500, 1rem/1, 5 "poppins", sans-serif;
+  font: 500, 1rem/1.5 "poppins", sans-serif;
 }
 
 .font-2-m {
@@ -27,7 +27,7 @@
 }
 
 .font-2-l-b {
-  font: 500 1.5rem/1, 5 "roboto", sans-serif;
+  font: 500 1.5rem/1.5 "roboto", sans-serif;
 }
 
 .font-2-l {
