--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,8 @@
 @import "./bicicletas/bicicletas-lista.css";
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
+@import "./home/depoimento.css";
+@import "./seguros/seguros.css";
+@import "./global/footer.css";
+@import "./termos/termos.css";
+@import "./bicicletas/bicicletas.css";
